...
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_trainings"
        android:icon="@drawable/ic_archery_24dp"
        android:title="@string/training"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_bows"
        android:icon="@drawable/ic_bow_24dp"
        android:title="@string/bow"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_arrows"
        android:icon="@drawable/ic_arrow_24dp"
        android:title="@string/arrow"
...
