...
    <item
        android:id="@+id/fab2"
        android:icon="@drawable/fab_album_24dp"
        android:orderInCategory="0"
        android:title="@string/training_with_standard_round"/>
    <item
        android:id="@+id/fab1"
        android:icon="@drawable/fab_trending_up_white_24dp"
        android:orderInCategory="1"
        android:title="@string/free_training"/>

</menu>

