<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2018 Florian Dreier
  ~
  ~ This file is part of MyTargets.
  ~
  ~ MyTargets is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License version 2
  ~ as published by the Free Software Foundation.
  ~
  ~ MyTargets is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/slidingTabs"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:textColor="@color/tab_layout_text"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
