...

    <!-- General -->
    <string name="preferences">Options</string>
    <string name="settings">Settings</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="custom">Custom</string>
    <string name="training">Training</string>
    <string name="bow">Bow</string>
    <string name="arrow">Arrow</string>
    <string name="round">Round</string>
    <string name="points">Points</string>
    <string name="passe">End</string>

    <!-- Overview -->
    <string name="new_training">New training</string>
...
    <string name="brand">Brand</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="height">Brace height</string>
    <string name="tiller">Tiller</string>
    <string name="sight_settings">Sight settings</string>
    <string name="add">Add</string>
    <string name="take_picture">Take a picture</string>
    <string name="pick_from_gallery">Select a picture from gallery</string>

    <!-- New arrow -->
    <string name="add_arrow">Add arrow</string>
    <string name="length">Length</string>
...
