...
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_check_white_24dp"
        android:title="@string/save"
        app:showAsAction="ifRoom"/>

</menu>

